# rusty-ponyo

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile2  Justfile  README.md  build.sh  docker-compose.yaml  download_font.sh  go.mod  go.sum  main.go  rust-toolchain.toml  rustfmt.toml
.github/: renovate.json
.github/workflows/: build.yml  docker-image.yml
bot/: bot.go
bot/alias/: alias.go  parser.go
bot/alias/parser/: Cargo.toml  cbindgen.toml  parser.h
bot/alias/parser/src/: lib.rs  parser.rs
client/discord/: discord.go
db/mongo/: mongo.go
model/: model.go
src/: lib.rs  main.rs  model.rs  trait_ext.rs
src/bot/: mod.rs
src/bot/alias/: command.rs  commands.rs  mod.rs  model.rs  parser.rs
src/bot/auth/: mod.rs  token_text.txt
src/bot/auth/messages/: help_text.txt
src/bot/genkai_point/: help_text.txt  mod.rs  model.rs  parse.rs
src/bot/genkai_point/formula/: mod.rs  v1.rs  v2.rs  v3.rs
src/bot/genkai_point/messages/: help_text.txt
src/bot/genkai_point/plot/: charming.rs  matplotlib.rs  mod.rs  plotters.rs
src/bot/gh/: mod.rs
src/bot/meigen/: ferris.ascii  gopher.ascii  mod.rs  model.rs
src/bot/uo/: mod.rs
src/bot/vc_diff/: mod.rs
src/client/: console.rs  discord.rs  mod.rs  test.rs
src/db/: mem.rs  mod.rs  mongodb.rs
src/db/mongodb/: mod.rs  model.rs
