[package]
name = "rusty-ponyo"
version = "0.9.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2021"

[features]
discord_client = ["serenity"]
console_client = []

mongo_db = ["mongodb", "tokio-stream"]
memory_db = []

plot_matplotlib = ["inline-python"]
plot_plotters = ["plotters", "png"]

plot_plotters_static = ["plot_plotters", "plotters/ab_glyph"]
plot_plotters_dynamic = ["plot_plotters", "plotters/ttf"]

dev = ["memory_db", "console_client", "plot_plotters_dynamic"]

default = ["dev"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4", features = ["derive"] }
derivative = "2"
dotenv = "0.15"
hex = "0.4"
once_cell = "1"
ordered-float = { version = "3" }
parking_lot = "0.12"
rand = "0.8"
regex = "1"
sequoia-openpgp = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellwords = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

# mongo
tokio-stream = { version = "0.1", optional = true }

# plot_matplotlib
inline-python = { version = "0.10", optional = true }

# plot_plotters
png = { version = "0.17", optional = true }

[dependencies.serenity]
version = "0.11"
optional = true
default-features = false
features = ["rustls_backend", "client", "gateway", "model", "cache"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "parking_lot", "fs", "macros", "signal"]

[dependencies.mongodb]
version = "2"
features = ["bson-chrono-0_4"]
optional = true

# ab_glyph feature required for static build is not released yet (as of 2023/01/31)
[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters.git"
rev = "acf5158"
optional = true
default-features = false
features = [
    "bitmap_backend", "all_series", "all_elements", "full_palette", "ab_glyph",
]

[dev-dependencies]
pretty_assertions = "1"

