[package]
name = "rusty-ponyo"
version = "2023.11.12-1"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2021"

[features]
discord_client = ["serenity"]
console_client = []

mongo_db = ["mongodb", "tokio-stream"]
memory_db = []

plot_matplotlib = ["inline-python"]
plot_plotters = ["plotters", "png"]

plot_plotters_static = ["plot_plotters", "plotters/ab_glyph"]
plot_plotters_dynamic = ["plot_plotters", "plotters/ttf"]

dev = ["memory_db", "console_client", "plot_plotters_dynamic"]
# prod = ["mongo_db", "discord_client", "plot_plotters_static"]

default = ["dev"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4", features = ["derive"] }
derivative = "2"
dotenv = "0.15"
hex = "0.4"
humantime = "2"
image = { version = "0.24", features = ["webp-encoder"] }
libwebp-sys = "0.9"
once_cell = "1"
ordered-float = { version = "4" }
parking_lot = "0.12"
rand = "0.8"
regex = "1"
sequoia-openpgp = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellwords = "1"
static_assertions = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

# mongo
tokio-stream = { version = "0.1", optional = true }

# plot_matplotlib
inline-python = { version = "0.12", optional = true }

# plot_plotters
png = { version = "0.17", optional = true }
bigdecimal = "0.4.2"

[dependencies.serenity]
version = "0.11"
optional = true
default-features = false
features = [
    "rustls_backend",
    "client",
    "gateway",
    "model",
    "cache",
    "temp_cache",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "parking_lot", "fs", "macros", "signal"]

[dependencies.mongodb]
version = "2"
features = ["bson-chrono-0_4"]
optional = true

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = [
    "bitmap_backend",
    "all_series",
    "all_elements",
    "full_palette",
    "ab_glyph",
]

[dev-dependencies]
pretty_assertions = "1"
