[package]
name = "rusty-ponyo"
version = "2024.9.25-1"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2021"

[features]
discord_client = ["serenity"]
console_client = []

mongo_db = ["mongodb", "tokio-stream", "bson"]
memory_db = []

plot_matplotlib = ["inline-python"]
plot_plotters = ["plotters", "png"]
plot_charming = ["charming", "crossbeam"]

plot_plotters_static = ["plot_plotters", "plotters/ab_glyph"]
plot_plotters_dynamic = ["plot_plotters", "plotters/ttf"]

dev = ["memory_db", "console_client", "plot_charming"]
prod = ["mongo_db", "discord_client", "plot_charming"]

default = ["prod"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
derivative = "2"
dotenv = "0.15"
hex = "0.4"
humantime = "2"
image = "0.25"
libwebp-sys = "0.10"
once_cell = "1"
ordered-float = { version = "4" }
parking_lot = "0.12"
rand = "0.8"
regex = "1"
sequoia-openpgp = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellwords = "1"
static_assertions = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

# mongo
tokio-stream = { version = "0.1", optional = true }
bson = { version = "2.13.0", features = ["chrono-0_4"], optional = true }

# plot_matplotlib
inline-python = { version = "0.12", optional = true }

# plot_plotters
png = { version = "0.17", optional = true }

# plot_charming
crossbeam = { version = "0.8", optional = true }
bzip2-sys = { version = "0.1.11", features = ["static"] }

[dependencies.charming]
version = "0.3"
optional = true
default-features = false
features = ["ssr"]


[dependencies.serenity]
version = "0.12"
optional = true
default-features = false
features = [
    "rustls_backend",
    "client",
    "gateway",
    "model",
    "cache",
    "temp_cache",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "parking_lot", "fs", "macros", "signal"]

[dependencies.mongodb]
version = "3"
optional = true

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = [
    "bitmap_backend",
    "all_series",
    "all_elements",
    "full_palette",
    "ab_glyph",
]


[dev-dependencies]
pretty_assertions = "1"

[patch.crates-io]
# note. この版が crates.io に publish されたら削除して :ok:
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", package = "pathfinder_simd" }
